flexbox and spacing issues

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -1,3 +1,26 @@
 body {
     font-family: 'Asap Condensed', sans-serif;
 }
+
+.container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    padding: 5px;
+}
+.movie {
+    width: 150px;
+    height: 250px;
+    padding:5px;
+    margin: 10px;
+}
+
+img {
+    display: block;
+    margin: 0 auto;
+}
+
+.float {
+    float: left;
+}
